# ccpc

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
docs/: design.md
examples/cc-plugin/: .mcp.json
examples/cc-plugin/.claude-plugin/: plugin.json
examples/cc-plugin/agents/: reviewer.md
examples/cc-plugin/commands/: deploy.md
examples/cc-plugin/hooks/: hooks.json
examples/cc-plugin/skills/greet/: SKILL.md
schemas/: PINNED.toml
scripts/: smoke.sh
src/: main.rs
