[package]
name = "ccpc"
version = "0.1.0"
edition = "2021"
description = "Agent Plugin eXchange CLI for Claude Code, Codex, and opencode plugins"
license = "MIT OR Apache-2.0"
repository = "https://github.com/f4ah6o/ccpc"

[[bin]]
name = "ccpc"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
walkdir = "2.5"

[dev-dependencies]
tempfile = "3.10"
